--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">Note Taker
+    <a class="navbar-brand" href="/">Note Taker App
     </a>
   </nav>
   <div class="container">
